--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "element-plus": "^2.2.12",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
+    "local-storage": "^2.0.0",
     "pinia": "^2.0.19",
     "vue": "^3.2.37",
     "vue-router": "4"
