--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "element-plus": "^2.2.12",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
     "local-storage": "^2.0.0",
     "pinia": "^2.0.19",
+    "sass": "^1.54.5",
     "vue": "^3.2.37",
     "vue-router": "4"
   },
